feat(auth): implement user registration and login with JWT

--- a/HandMade_Store_api/appsettings.json
+++ b/HandMade_Store_api/appsettings.json
@@ -1,9 +1,25 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=HandmadeStore;User Id=sa;Password=123456Bao;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "ngobao0419@gmail.com",
+    "Password": "sqgb nunp ijii pfai",
+    "EnableSsl": "true"
+  },
+  "Jwt": {
+    "Key": "hdfwjs232j3u28jdsjbdbshfsjkfjkb31j23b12bnbdn",
+    "Issuer": "furniture_api",
+    "Audience": "furniture_client"
+  },
+
   "AllowedHosts": "*"
 }
